@@ -3,7 +3,11 @@ import ee.taltech.iti0202.logger.filter.LogFilter;
 import ee.taltech.iti0202.logger.formatter.LogFormatter;
 import ee.taltech.iti0202.logger.level.Level;
 
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class FileLogger extends Logger {
 
@@ -17,27 +21,31 @@ public class FileLogger extends Logger {
 
     public FileLogger(String tag, String logFilePath) {
         super(tag);
-        this.logFilePath = Path.of(logFilePath);
+        this.logFilePath = Paths.get(logFilePath);
     }
 
     public FileLogger(String tag, String logFilePath, Level level) {
         super(tag, level);
-        this.logFilePath = Path.of(logFilePath);
+        this.logFilePath = Paths.get(logFilePath);
     }
 
     public FileLogger(String tag, String logFilePath, Level level, LogFormatter formatter) {
         super(tag, level, formatter);
-        this.logFilePath = Path.of(logFilePath);
+        this.logFilePath = Paths.get(logFilePath);
     }
 
     public FileLogger(String tag, String logFilePath, LogFilter filter, LogFormatter formatter) {
         super(tag, filter, formatter);
-        this.logFilePath = Path.of(logFilePath);
+        this.logFilePath = Paths.get(logFilePath);
     }
 
     @Override
     protected void writeLog(String message) {
-        // append to log file if exists
-        // if doesn't exist create file
+        try (BufferedWriter writer = Files.newBufferedWriter(logFilePath)) {
+            writer.write(message + "\n");
+        } catch (IOException e) {
+            System.out.println("IOException:" + e.getMessage());
+            e.printStackTrace();
+        }
     }
 }
